# gretl

./: CMakeLists.txt  README.md  checkpoint.hpp  create_state.hpp  data_store.cpp  data_store.hpp  double_state.hpp  print_utils.hpp  state.hpp  state_base.cpp  state_base.hpp  test_utils.hpp  upstream_state.hpp  vector_state.cpp  vector_state.hpp
scripts/: plot_checkpoint_scaling.py
src/gretl/: CMakeLists.txt  checkpoint.hpp  checkpoint_strategy.hpp  create_state.hpp  data_store.cpp  data_store.hpp  online_r2_checkpoint_strategy.cpp  online_r2_checkpoint_strategy.hpp  periodic_checkpoint_strategy.cpp  periodic_checkpoint_strategy.hpp  state.hpp  store_all_checkpoint_strategy.cpp  store_all_checkpoint_strategy.hpp  strumm_walther_checkpoint_strategy.cpp  strumm_walther_checkpoint_strategy.hpp  upstream_state.hpp  vector_state.cpp  wang_checkpoint_strategy.cpp  wang_checkpoint_strategy.hpp
src/tests/: CMakeLists.txt  test_gretl_checkpoint.cpp  test_gretl_checkpoint_compare.cpp  test_gretl_checkpoint_scaling.cpp  test_gretl_dynamics.cpp  test_gretl_graph.cpp  test_gretl_robustness.cpp  test_persistent_scope.cpp
tests/: CMakeLists.txt  test_gretl_checkpoint.cpp  test_gretl_dynamics.cpp  test_gretl_graph.cpp
